--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
     <body>
         <header>
             <!--Navbar-->
-            <!-- ***Still need to add links to hrefssss!!!!-->
             <!-- *** Edit "class" names-->
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="#">Carmen Hui</a>
+                <a class="navbar-brand-name" href="index.html" >Carmen Hui</a>
                 
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
@@ -29,26 +28,24 @@
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                     <ul class="d-flex align-items-end navbar-nav ml-lg-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
+                            <a class="nav-link" href="contact.html">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Portfolio</a>
+                            <a class="nav-link" href="portfolio.html">Portfolio</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">About Me<span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="index.html">About Me<span class="sr-only">(current)</span></a>
                         </li>
                     </ul>
                 </div>
             </nav>
-
-
         </header>
         <!--About Me-->
         <!-- ***Remember to check if article can replace/consolidate div for grid system-->
-        <div class="container">
-            <div class="row">
-                <div class="col-8">
-                    <article class="card">
+        <article class="container">
+            <section class="row">
+                <section class="col-8">
+                    <section class="card">
                         <section class="aboutme">
                             <h1 id="aboutme">About Me</h1>
                             <hr>
@@ -59,15 +56,15 @@
                             </p>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
                         </section>
-                    </article>
-                </div>
-            </div>
-        </div>
+                    </section>
+                </section>
+            </section>
+        </article>
         
     </body>
     <!--Footer-->
-    <!-- *** Add padding -->
     <footer class="footer">
+        <div id="footer"></div>
         <h5>&copy;Copyright</h5>
     </footer>
 </html>
