Modified HTML, CSS files. Changed 2 images in index and porfolio HTML files.

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
                             <h1 id="aboutme">About Me</h1>
                             <hr>
                             <p>
-                            <img src="./assets/images/img.png" alt="Boats in the horizon">
+                            <img src="./assets/images/IMG_20160506_033319.jpg" alt="Picture of me.">
 
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                            Hello, my name is Carmen. I graduated Ryerson University with a BComm degree majoring in human resources. Nearing graduation, I became more and more aware that human resources was not going to be my career. I took some time after graduation to figure out what I wanted to pursue next. With advice from peers, some basic work from a friend studying computer science, as well as further research, I found myself wanting to learn more.
                             </p>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
                         </section>
@@ -60,7 +60,10 @@
                 </section>
             </section>
         </article>
-        
+        <!--Javascript-->
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     </body>
     <!--Footer-->
     <footer class="footer">
