--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
                         <li class="nav-item">
                             <a class="nav-link" href="portfolio.html">Portfolio</a>
                         </li>
-                        <li class="nav-item active">
+                        <li class="nav-item">
                             <a class="nav-link" href="index.html">About Me<span class="sr-only">(current)</span></a>
                         </li>
                     </ul>
@@ -41,47 +41,56 @@
             </nav>   
         </header>
         <article class="container">
-            <section class="card">
-                <section class="portfolio">
-                    <h1 id="portfolio">Portfolio</h1>
-                    <hr>
-                    <section class= "row">  
-                        <section class="col-sm">
-                            <section class="portfolio-1">
-                                <img src="https://i.picsum.photos/id/703/200/200.jpg?hmac=6zWxIBRmIf2e0jZTqvKBIwrc7wm-dPkvGky4go6Yyvg" alt="Rainbow in the sky.">
+            <section class="row-1">
+                <section class="col-8">
+                    <section class="card">
+                        <section class="portfolio">
+                            <h1 id="portfolio">Portfolio</h1>
+                            <hr>
+                            <section class= "row">  
+                                <section class="col-sm">
+                                    <section class="portfolio-1">
+                                        <img src="./assets/images/20200319_000957.jpg" alt="My hamster, Lily.">
+                                    </section>
+                                </section>
+                                <section>
+                                    <section class="col-sm">
+                                        <section class="portfolio-2">
+                                            <img src="https://i.picsum.photos/id/570/200/200.jpg?hmac=fgqmD9u8TqyXJG9fhqV-EbhIUXYwTIxfsPiNfaD28_Y" alt="Forest.">
+                                        </section>
+                                    </section>
+                                </section>  
                             </section>
-                        </section>
-                        <section>
-                            <section class="col-sm">
-                                <section class="portfolio-2">
-                                    <img src="https://i.picsum.photos/id/570/200/200.jpg?hmac=fgqmD9u8TqyXJG9fhqV-EbhIUXYwTIxfsPiNfaD28_Y" alt="Forest.">
+                            <section class="row">
+                                <section class="col-sm">
+                                        <section class="portfolio-3">
+                                            <img src="https://i.picsum.photos/id/994/200/200.jpg?hmac=a0dwH_eftBXVmeonrMy5xNmGDPwiXgXrzUjjUQLEtR8" alt="Horizon.">
+                                        </section>
+                                </section>
+                                <section class="col-sm">
+                                    <section class="portfolio-4">
+                                        <img src="https://i.picsum.photos/id/27/200/200.jpg?hmac=CR097EjlzbMVaroKJsDHX-nARM-O-4gnpDICBxhqbEU" alt="Sunset at the beach.">
+                                    </section>
                                 </section>
                             </section>
-                        </section>  
-                    </section>
-                    <section class="row">
-                        <section class="col-sm">
-                                <section class="portfolio-3">
-                                    <img src="https://i.picsum.photos/id/994/200/200.jpg?hmac=a0dwH_eftBXVmeonrMy5xNmGDPwiXgXrzUjjUQLEtR8" alt="Horizon.">
-                                </section>
-                        </section>
-                        <section class="col-sm">
-                            <section class="portfolio-4">
-                                <img src="https://i.picsum.photos/id/27/200/200.jpg?hmac=CR097EjlzbMVaroKJsDHX-nARM-O-4gnpDICBxhqbEU" alt="Sunset at the beach.">
-                            </section>
-                        </section>
-                    </section>
-                        <section class="row">
-                            <section class="col-sm">
-                                <section class="portfolio-5">
-                                    <img src="https://i.picsum.photos/id/250/200/200.jpg?hmac=23TaEG1txY5qYZ70amm2sUf0GYKo4v7yIbN9ooyqWzs" alt="Camera.">
+                                <section class="row">
+                                    <section class="col-sm">
+                                        <section class="portfolio-5">
+                                            <img src="https://i.picsum.photos/id/250/200/200.jpg?hmac=23TaEG1txY5qYZ70amm2sUf0GYKo4v7yIbN9ooyqWzs" alt="Camera.">
+                                        </section>
+                                    </section>
                                 </section>
                             </section>
                         </section>
                     </section>
                 </section>
+
             </section>
         </article>
+        <!--Javascript-->
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     </body>
     
     <!--Footer-->
