Finished README.md, further modified HTML and CSS.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </header>
         <!--About Me-->
         <!-- ***Remember to check if article can replace/consolidate div for grid system-->
-        <article class="container">
+        <article class="container-fluid">
             <section class="row">
                 <section class="col-8">
                     <section class="card">
