--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@
                 </div>
             </nav>   
         </header>
-        <article class="container">
+        <article class="container-fluid">
             <section class="row-1">
                 <section class="col-10">
                     <section class="card">
