Reviewed files, added comments, changed spacing...

--- a/portfolio.html
+++ b/portfolio.html
@@ -40,6 +40,7 @@
                 </div>
             </nav>   
         </header>
+        <!--Portfolio Content-->
         <article class="container-fluid">
             <section class="row-1">
                 <section class="col-10">
